Fix link colour on mobile (responsive)

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -93,6 +93,7 @@ body {
 
   .site-nav .page-link {
     margin-bottom: 8px;
+    color: #87A9D5;
   }
 
   .site-header img {
